# Sdizo1-projekt

./: BinaryHeap.cpp  BinaryHeap.h  CMakeLists.txt  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  FromFileTests.cpp  FromFileTests.h  List.cpp  List.h  ListElements.cpp  ListElements.h  ListNode.cpp  ListNode.h  Node.cpp  Node.h  README.md  RedBlackTree.cpp  RedBlackTree.h  Sprawozdanie SDIZO- projekt 1.docx  Tests.cpp  Tests.h  Time.cpp  Time.h  main.cpp
